[LATEST UPDATE] Implement Automated Refund for PayPal Payment Option
- Add RefundService class to handle automated refunds for applicable payment methods when orders are rejected or cancelled.
- Add the new Order Status: REFUNED for successfully refunded orders.
- Update the PayPalSubsystem with refund-related method.
- Update the location of controllers for .fxml files.